Dev To Master (#38)
* clean up duplicate fail messages.

* wildcard logback dependency

* spring: update dependencies

* barn: refactor expect labels

there was a conflict with filtering "expect".

* json: improve serialization and json null support

* kernel: refactor expectation evaluating and serialization

Improve and modularize evaluating expectations,
improve serialization, introduce conditional expectation builder
framework.

* rest:add internal server for rest testing

* testng&spring:add support for conditional builder

* kernel: add serializeTo and fix minor bug in compare boolean and compare date

* json:add JsonString and secondary value match for find by value

* barn: fix bug for filtering expectations

* testng:refactor and clean up imports

* testng:hardcode testng version until 7 is released

* revisit insert utils

* improve cast list

if value is not a list, try converting to goate to see if it is
something (like a jsonarray) that contains a list

* update gradle instance

switch to hardcoded versions, upgrade to gradle 5.4.1

* json: improve json serialize and string support

* kernel: bug fixes, better file support, ground work for generic properties

* selenium:update version

* spreadsheets: make sure files are closed, add some tests.

* testng: improve expectation logging

* rest: add head, clean rest, and do not use prettyprint

* reformat

a few code changes and reformatting.

* oracle jdbc8 pom issues

comment out jdbc8 dependencies and code for now.

* this file was ignored

, but needs to be present for tests

* clean up tests for fresh clone.

* update gradle to 6 and support java 11

* update gradle and group versioning

move java version into artifact version.

* add findkeyignorecase and more expect tests

* fix getraresponse to use hopefully custom id for content and bytearray

* ignore selenium temp

* add support for adding capabilities to selenium dr